# bazel-example

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  jest.config.js  package.json  tsconfig.json
.github/workflows/: main.yml
apps/javascript/external_deps/: BUILD.bazel  index.js  package.json
apps/javascript/internal_deps/: BUILD.bazel  index.js  package.json
apps/javascript/no_deps/: BUILD.bazel  package.json
apps/jsapp001/: BUILD.bazel  index.js  package.json
apps/jsapp002/: BUILD.bazel  index.js  package.json
apps/jsapp003/: BUILD.bazel  package.json
apps/tsapp001/: BUILD.bazel  package.json
apps/typescript/external_deps/: BUILD.bazel  index.ts  package.json
apps/typescript/internal_deps/: BUILD.bazel  index.ts  package.json
apps/typescript/no_deps/: BUILD.bazel  index.ts  package.json
libs/javascript/external_deps/: BUILD.bazel  package.json
libs/javascript/internal_deps/: BUILD.bazel  index.js  package.json
libs/javascript/jest_test/: BUILD.bazel  package.json
libs/javascript/jest_test/__tests__/: index.test.js
libs/javascript/no_deps/: BUILD.bazel  index.js  package.json
libs/jslib001/: BUILD  package.json
libs/jslib002/: BUILD.bazel  index.js  package.json
libs/jslib003/: BUILD.bazel  index.js  package.json
libs/tslib001/: BUILD.bazel  package.json
libs/tslib002/: BUILD.bazel  package.json
libs/tslib003/: BUILD.bazel  index.ts  package.json
libs/typescript/external_deps/: BUILD.bazel  index.ts  package.json
libs/typescript/internal_deps/: BUILD.bazel  index.ts  package.json
libs/typescript/no_deps/: BUILD.bazel  package.json
rules/: jest.bzl
