package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package", "nodejs_binary", "rollup_bundle")

filegroup(
    name = 'src',
    srcs = [
        'index.js',
    ],
)

npm_package(
    name = 'pkg',
    srcs = [
        'package.json'
    ],
    deps = [
        ':src',
        '@npm//lodash',
    ],
)

nodejs_binary(
    name = 'bin',
    entry_point = ':index.js',
    data = [
        ':pkg'
    ]
)

rollup_bundle(
    name = 'bundle',
    entry_point = ':index.js',
    deps = [
        ':pkg',
    ],
)
