load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package", "nodejs_binary", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = 'lib',
    srcs = [
        'index.ts',
    ],
)

npm_package(
    name = 'pkg',
    srcs = ['package.json'],
    deps = [':lib'],
    visibility = ['//visibility:public'],
)

# rollup_bundle(
#     name = 'bundle',
#     entry_point = 'index.js',
#     deps = [
#         ':lib',
#     ],
#     visibility = ['//visibility:public'],
# )
