load("@build_bazel_rules_nodejs//:index.bzl", "npm_package", "nodejs_binary", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = 'lib',
    srcs = [
        'index.ts',
    ],
)

npm_package(
    name = 'pkg',
    srcs = ['package.json'],
    deps = [':lib'],
    visibility = ['//visibility:public'],
)

nodejs_binary(
    name = 'bin',
    data = [
        ':lib',
    ],
    entry_point = ':index.ts',
)

rollup_bundle(
    name = 'bundle',
    entry_point = ':index.ts',
    deps = [
        ':lib',
    ],
    visibility = ['//visibility:public'],
)
