package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")

filegroup(
    name = 'sources',
    srcs = [
        'index.js',
    ],
)

npm_package(
    name = 'jslib003',
    srcs = [
        'package.json'
    ],
    deps = [
        ':sources',
        '//libs/jslib001',
    ],
)
