package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

filegroup(
    name = 'src',
    srcs = [
        'index.ts',
    ],
)

ts_library(
    name = 'lib',
    srcs = [
        ':sources',
    ],
    deps = [],
)

npm_package(
    name = 'pkg',
    srcs = [
        'package.json',
    ],
    deps = [
        ':lib',
    ],
)
