load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = 'tslib002',
    module_name = '@igilham/tslib002',
    srcs = [
        'index.ts',
    ],
    deps = [
        '@npm//lodash'
    ],
    visibility = ['//visibility:public'],
)
