load("@build_bazel_rules_nodejs//:index.bzl", "npm_package")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = 'tslib003',
    module_name = '@igilham/tslib003',
    srcs = [
        'index.ts',
    ],
    deps = [
        '//libs/tslib001'
    ],
    visibility = ['//visibility:public'],
)
