load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "pkg_npm")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")

filegroup(
    name = "src",
    srcs = [
        "index.js",
    ],
)

pkg_npm(
    name = "pkg",
    srcs = [
        "package.json",
    ],
    deps = [
        ":src",
        "@npm//lodash",
    ],
)

nodejs_binary(
    name = "bin",
    data = [
        ":pkg",
    ],
    entry_point = ":index.js",
    visibility = ["//visibility:public"],
)

rollup_bundle(
    name = "bundle",
    entry_point = ":index.js",
    visibility = ["//visibility:public"],
    deps = [
        ":pkg",
    ],
)
