load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm", "nodejs_binary")
# load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

filegroup(
    name = 'src',
    srcs = [
        'index.js',
    ],
)

pkg_npm(
    name = 'pkg',
    srcs = [
        'package.json'
    ],
    deps = [
        ':src'
    ],
)

nodejs_binary(
    name = 'bin',
    entry_point = ':index.js',
    data = [
        ':pkg',
        '//libs/javascript/no_deps:pkg'
    ]
)

# rollup_bundle(
#     name = 'bundle',
#     entry_point = ':index.js',
#     deps = [
#         ':pkg',
#     ],
# )
