load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm", "nodejs_binary")
load("@npm_bazel_typescript//:index.bzl", "ts_library")
# load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

ts_library(
    name = 'lib',
    module_name = 'app-typescript-no-deps',
    srcs = [
        'index.ts',
    ],
)

pkg_npm(
    name = 'pkg',
    srcs = ['package.json'],
    deps = [':lib'],
    visibility = ['//visibility:public'],
)

nodejs_binary(
    name = 'bin',
    data = [
        ':lib',
    ],
    entry_point = ':index.ts',
)

# legacy rollup_bundle rule is deprecated. Wait for new implementation to mature before upgrading
# rollup_bundle(
#     name = 'bundle',
#     entry_point = ':index.ts',
#     deps = [
#         ':lib',
#     ],
#     visibility = ['//visibility:public'],
# )
