load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

filegroup(
    name = "src",
    srcs = [
        "index.js",
    ],
)

js_library(
    name = "pkg",
    package_name = "lib-javascript-external-deps",
    srcs = [
        "package.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":src",
        "@npm//lodash",
    ],
)
