load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

filegroup(
    name = 'src',
    srcs = [
        'index.js',
    ],
)

pkg_npm(
    name = 'pkg',
    srcs = [
        'package.json'
    ],
    deps = [
        ':src',
        '//libs/javascript/no_deps:pkg',
    ],
    visibility = ['//visibility:public'],
)
