load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = 'external_deps',
    module_name = 'lib-typescript-external-deps',
    srcs = [
        'index.ts',
    ],
    deps = [
        '@npm//lodash'
    ],
    visibility = ['//visibility:public'],
)
