load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

package(default_visibility=["//visibility:public"])

ts_library(
    name = "compile",
    srcs = [
        "index.ts",
    ],
    module_name = "lib-typescript-external-deps",
    deps = [
        "@npm//lodash",
    ],
)

filegroup(
    name = "compiled_sources.js",
    srcs = ["compile"],
    output_group = "es6_sources",
)

js_library(
    name = "pkg",
    package_name = "lib-typescript-external-deps",
    srcs = [
        "package.json",
    ],
    deps = [
        ":compiled_sources.js",
    ],
)
