load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = 'internal_deps',
    module_name = 'lib-typescript-internal-deps',
    srcs = [
        'index.ts',
    ],
    deps = [
        '//libs/typescript/no_deps'
    ],
    visibility = ['//visibility:public'],
)
