load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "internal_deps",
    srcs = [
        "index.ts",
    ],
    module_name = "lib-typescript-internal-deps",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/typescript/no_deps",
    ],
)
